<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BD2AC0"
        android:text="Back"
        android:textColor="#000000" />

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_alignBottom="@+id/productDetails"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="30dp"

        android:layout_marginBottom="512dp"
        android:background="#BD2AC0"
        android:src="@drawable/baseline_image_24" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/productImage" />

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnBack"
        android:layout_marginLeft="55dp"
        android:layout_marginBottom="-73dp"
        android:src="@drawable/baseline_arrow_back_24" />-->

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/productImage"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="96dp"
        android:layout_toStartOf="@+id/productImage" />

    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnBack"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="55dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="-72dp"
        android:src="@drawable/baseline_arrow_forward_24" />-->

    <LinearLayout
        android:id="@+id/productDetails"
        android:layout_width="393dp"
        android:layout_height="450dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="75dp"
        android:background="#BD2AC0"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Product Name: "
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Description:"
            android:textColor="#000000"
            android:textSize="16sp"


            />

        <TextView
            android:id="@+id/tvDescriptionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_pink"
            android:padding="8dp"
            android:maxLines="2"
            android:scrollbars="vertical"
            android:text=""
            android:textColor="#000000"
            android:textSize="16sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Date of Purchase: "
            android:textColor="@color/black"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/make"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Make: "
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Model: "
            android:textColor="@color/black"
            android:textSize="16dp"
            android:maxLines="1"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/serialnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Serial Number: "
            android:textColor="@color/black"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <TextView
            android:id="@+id/value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Estimated Value: "
            android:textColor="@color/black"
            android:textSize="16dp"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="17dp">

        </Space>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Comment: "
                android:textSize="16sp"
                android:textColor="@color/black"
                >

            </TextView>

            <TextView
                android:id="@+id/comment"
                android:layout_width="265dp"
                android:layout_height="25dp"
                android:paddingRight="20dp"
                android:textColor="@color/black"
                android:textSize="16dp"
                ></TextView>


        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:textSize="25sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="15dp">

        </Space>

        <LinearLayout
            android:layout_width="340dp"
            android:layout_height="38dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tags"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:text="Tags: "
                android:textColor="@color/black"
                android:textSize="16dp"
                tools:ignore="TextSizeCheck" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagsGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BD2AC0"
        android:text="Delete"
        android:textColor="#000000" />

    <Button
        android:id="@+id/btnEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#BD2AC0"
        android:text="Edit"
        android:textColor="#000000" />




</RelativeLayout>