...
        android:background="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@id/sort_block"/>


    <!-- List of Items -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/sort_block"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/total_value_layout">
...
                android:layout_gravity="center"
                android:orientation="vertical"
                android:id="@+id/btn_add_item">

                <!-- Middle Button (Add) -->
                <ImageButton
                    android:id="@+id/add_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="#BD2AC0"
                    android:layout_gravity="center"
                    android:src="@drawable/rsz_add"
                    android:contentDescription="Click to add an item"/>
...
                android:paddingEnd="8dp"
                android:orientation="vertical">

                <!-- Right Button (Profile) -->

                <ImageButton
                    android:id="@+id/profile_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:background="#BD2AC0"
                    android:contentDescription="CLick to view profile"
                    android:paddingEnd="10dp"
...
